src/css/ViewSwitcher.css
#view-switcher {
  list-style: none;
  margin: 0;
  margin-top: 35px;
  padding: 0;
  width: 100%;
  height: calc(100vh - 35px);
  overflow: hidden;
  border-radius: 0 0 5px 5px;
  display: flex;
  flex-flow: row wrap;
}

#view-switcher.theme-dark {
  color: white;
}

.view-right.sidebar-collapsed {
  width: calc(100% - 60px);
}

.view-right {
  width: calc(100% - 225px);
  transition: .3s ease-out;
}

.warnings {
  width: inherit;
  position: absolute;
  top: 0;
}

